--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dotenv": "^17.2.3",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
-    "next": "14.0.4",
+    "next": "^14.2.33",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
