--- a/env.example
+++ b/env.example
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb://localhost:27017/scihome
+MONGODB_URI=mongodb://root:2!p$OcY^%OsoVB$*0F3x@localhost:27017/scihome?authSource=admin
 NEXTAUTH_SECRET=your-secret-key-here
 NEXTAUTH_URL=http://localhost:3000
