--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "next lint",
     "test": "jest",
     "seed": "node scripts/seed.js",
-    "backup": "node scripts/backup.js",
+    "backup": "bash scripts/backup.sh",
+    "backup:full": "node scripts/backup-full.js",
+    "backup:db": "node scripts/backup.js",
     "restore": "node scripts/restore.js"
   },
   "dependencies": {
