--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "backup": "bash scripts/backup.sh",
     "backup:full": "node scripts/backup-full.js",
     "backup:db": "node scripts/backup.js",
+    "backup:database": "bash scripts/backup-database.sh",
     "restore": "node scripts/restore.js"
   },
   "dependencies": {
