--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "sharp": "^0.34.5"
+    "sharp": "^0.34.5",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
